--- a/templates/index.html
+++ b/templates/index.html
@@ -4,24 +4,32 @@
     <meta charset="UTF-8">
     
     <link href="../css/resources/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="../css/resources/fontawesome.min.css" rel="stylesheet" type="text/css">
+
     <link href="../css/styles.css" rel="stylesheet" type="text/css">
+
+    <script src="../js/app.js"></script>
 
     <title>Planetary Director</title>
 
     <script>
-      const copyToClip = require('copy-to-clipboard');
+      var appSettings = planetaryDirectory.lsDir('.');
 
-      window.jQuery = require('jquery');
+      console.log( appSettings );
     </script>    
   </head>
   <body>
-    <div class="center-panel">
+    <div class="text-center">
       <h1>Planetary Director</h1>
     </div>
 
-    <div class="body-panel">
+    <div class="row">
+      <div class="col" id="display-files">
+        
+      </div>
 
+      <div class="col">
+        <input type="text" name="server-ip"/>
+      </div>
     </div>
   </body>
 </html>
