File manager code can now move up and down the file structure

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,5 +14,5 @@ body {
     margin: 0; }
   #display-files li.folder-icon {
     background: url("../img/icons/folder.png") no-repeat left top; }
-  #display-files .file-icon {
+  #display-files li.file-icon {
     background: url("../img/icons/file.png") no-repeat left top; }
