--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -23,7 +23,7 @@ body {
 		background: url('../img/icons/folder.png') no-repeat left top;
     }
 
-	.file-icon {
+	li.file-icon {
 		background: url('../img/icons/file.png')  no-repeat left top;
     }    
 }
