--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,10 @@
     <title>Planetary Director</title>
 
     <script>
-      var appSettings = planetaryDirectory.lsDir('.');
-
-      console.log( appSettings );
+      planetaryDirectory.lsDir('/home/');
+      setTimeout(function() {
+        planetaryDirectory.bindClicks();
+      }, 500);
     </script>    
   </head>
   <body>
@@ -25,10 +26,6 @@
     <div class="row">
       <div class="col" id="display-files">
         
-      </div>
-
-      <div class="col">
-        <input type="text" name="server-ip"/>
       </div>
     </div>
   </body>
