--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,10 @@
       <div class="col" id="display-files">
         
       </div>
+
+      <div class="col" id="action-panel">
+        <div id="file-info"></div>
+      </div>      
     </div>
   </body>
 </html>
