--- a/templates/settings.html
+++ b/templates/settings.html
@@ -12,7 +12,7 @@
     <title>Planetary Dictator</title>
 
     <script>
-
+      planetaryDirectory.settingsForm();
     </script>    
   </head>
   <body>
@@ -23,20 +23,20 @@
     <div class="row justify-content-center align-items-center">
       <form action="#">
         <div class="col">    
-            <div class="form-group">
-              <label for="email">IPFS Repo:</label>
+            <div class="form-group settings-field">
+              <label for="ipfs-repo">IPFS Repo:</label>
               <br />
-              <input type="file" webkitdirectory />
+              <input type="file" name="ipfs-repo" id="ipfs-repo" webkitdirectory required/>
             </div>
-            <div class="form-group">
-              <label for="pwd">Default File System Directory:</label>
+            <div class="form-group settings-field">
+              <label for="system-repo">Default File System Directory:</label>
               <br />
-              <input type="file" webkitdirectory />
+              <input type="file" name="system-path"  id="system-path" webkitdirectory required/>
             </div>
         </div>
 
-        <div class="col-md  text-center">    
-            <button type="submit" class="btn btn-default">Save Settings</button>
+        <div class="col-md">    
+            <button type="submit" class="btn btn-default save-button">Save Settings</button>
         </div>
       </form> 
     </div>     
