--- a/templates/settings.html
+++ b/templates/settings.html
@@ -12,7 +12,7 @@
     <title>Planetary Dictator</title>
 
     <script>
-      planetaryDirectory.settingsForm();
+      planetaryDictator.settingsForm();
     </script>    
   </head>
   <body>
