--- a/css/styles.css
+++ b/css/styles.css
@@ -17,20 +17,20 @@ body {
 h1, h2 {
   font-family: "Orbitron"; }
 
-#display-files {
+#display-local-files {
   margin: 10px;
   height: 50vh;
   overflow-y: scroll; }
-  #display-files li {
+  #display-local-files li {
     list-style-type: none;
     height: 35px;
     padding-left: 40px;
     margin: 0; }
-  #display-files li.parent-icon {
+  #display-local-files li.parent-icon {
     background: url("../img/icons/parent-dir.png") no-repeat left top; }
-  #display-files li.folder-icon {
+  #display-local-files li.folder-icon {
     background: url("../img/icons/folder.png") no-repeat left top; }
-  #display-files li.file-icon {
+  #display-local-files li.file-icon {
     background: url("../img/icons/file.png") no-repeat left top; }
 
 .settings-field {
