--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -30,7 +30,7 @@ h1, h2 {
 	font-family: "Orbitron";
 } 
 
-#display-local-files {
+#display-local-files, #display-ipfs-files {
 	margin: 10px;
 	height:50vh; 
 	overflow-y: scroll;
