--- a/templates/index.html
+++ b/templates/index.html
@@ -8,19 +8,24 @@
     <link href="../css/styles.css" rel="stylesheet" type="text/css">
 
     <script src="../js/app.js"></script>
+    <script src="../js/quotes.js"></script>
 
     <title>Planetary Dictator</title>
 
-    <script>
+    <script>    
       planetaryDictator.lsSysDir( userHome );
 
       setTimeout(function() {
-        // console.log( appSettings );
+        getQuote();
+        jQuery('#loading-model').show();
+
         planetaryDictator.bindClicks();
       }, 500);
     </script>    
   </head>
   <body>
+    <div class="body-cover"></div>
+
     <div class="text-center">
       <h2>Planetary Dictator</h2>
 
@@ -42,6 +47,18 @@
       <div class="col" id="action-panel">
         <div id="file-info"></div>
       </div>            
-    </div>    
+    </div>  
+
+    <div id="loading-model" class="modal" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Initialising IPFS Daemon....</h5>
+          </div>
+          
+          <div class="modal-body" id="space-quote"></div>
+        </div>
+      </div>
+    </div>  
   </body>
 </html>
