Added shutdown button to kill the IPFS daemon and shut the application

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,8 +40,15 @@
     </div>
 
     <div class="row">
-      <div class="col" id="ipfs-status">
-        <strong>IPFS Status:</strong> Offline
+      <div class="col">
+        <div>
+          <button type="button" class="btn btn-danger exit-program">Shutdown Daemon</button>
+          <button type="button" class="btn btn-primary">Swarm Info</button>
+        </div>
+
+        <div id="ipfs-status">
+          <strong>IPFS Status:</strong> Offline
+        </div>
       </div>
 
       <div class="col" id="action-panel">
