Fixed spelling mistake in class name

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
       setTimeout(function() {
         jQuery('.close-modal').hide();
         getQuote();
-        jQuery('#notification-model').show();
+        jQuery('#notification-modal').show();
 
         planetaryDictator.bindClicks();
       }, 500);
@@ -57,7 +57,7 @@
       </div>            
     </div>  
 
-    <div id="notification-model" class="modal" tabindex="-1" role="dialog">
+    <div id="notification-modal" class="modal" tabindex="-1" role="dialog">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
