--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -92,6 +92,21 @@ h1, h2 {
 
 .modal-content {
 	border: 1px solid #000;
+	overflow-x: hidden;
+
+    #modal-body {
+		max-height:450px;
+    	overflow-y:scroll;
+
+		.peer-title {
+			padding: 5px 0px 5px 0px;
+		}
+
+		.peer-info {
+			color: #333;
+			font-size:95%
+		}	
+    }
 }
 
 .save-button:hover {
