--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
 
     <div class="row">
       <div class="col">
-        <div>
+        <div class="action-buttons">
           <button type="button" class="btn btn-danger exit-program">Shutdown Daemon</button>
           <button type="button" class="btn btn-primary show-swarm">Swarm Info</button>
         </div>
