Added labels to the two file manager columns

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,10 @@
 
     </div>
 
+    <div class="row">
+      <div class="col text-center">Local File System</div>
+      <div class="col text-center">IPFS Node</div>  
+    </div>
     <div class="row file-browser-panel">
       <!-- Display the local file system -->
       <div class="col" id="display-local-files"></div>
