--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,8 @@ h1, h2 {
     width: 100%;
     min-height: 40px;
     padding: 10px 0px 10px; }
+    #file-actions .action-buttons button {
+      margin: 2px; }
 
 .file-browser-panel {
   border-top: 1px solid #000;
