--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,8 @@
         jQuery('.close-modal').hide();
         getQuote();
         jQuery('#notification-modal').show();
-
+        
+        planetaryDictator.checkNode();
         planetaryDictator.bindClicks();
       }, 500);
     </script>    
@@ -46,9 +47,9 @@
 
     <div class="row" id="file-actions">
       <div class="col">
-        <div class="action-buttons" id="left-controls"></>
-          <button type="button" class="btn btn-danger exit-program">Shutdown Daemon</button>
+        <div class="action-buttons" id="left-controls">
           <button type="button" class="btn btn-primary show-swarm">Swarm Info</button>
+          <button type="button" class="btn btn-danger exit-program">Shutdown Daemon</button>
         </div>
 
       </div>
