--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,16 @@ h1, h2 {
     #file-actions .action-buttons button {
       margin: 2px; }
 
+.alert-panel {
+  width: 90%;
+  margin: 0 auto;
+  overflow: hidden;
+  align-items: center;
+  justify-content: space-around;
+  display: none;
+  float: none;
+  margin-bottom: 50px; }
+
 .file-browser-panel {
   border-top: 1px solid #000;
   border-bottom: 1px solid #000; }
