--- a/templates/index.html
+++ b/templates/index.html
@@ -49,6 +49,7 @@
       <div class="col">
         <div class="action-buttons" id="left-controls">
           <button type="button" class="btn btn-primary show-swarm">Swarm Info</button>
+          <button type="button" class="btn btn-primary run-garbage-collection">Run Garbage Collection</button>
           <button type="button" class="btn btn-danger exit-program">Shutdown Daemon</button>
         </div>
 
@@ -74,6 +75,8 @@
         <div id="file-info"></div>
       </div> 
     </div>
+
+    <div class="alert alert-success fixed-bottom alert-panel" role="alert">dk</div>
 
     <div id="notification-modal" class="modal" tabindex="-1" role="dialog">
       <div class="modal-dialog modal-dialog-centered" role="document">
