--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <link href="../css/styles.css" rel="stylesheet" type="text/css">
 
     <script src="../js/app.js"></script>
+    <script src="../js/local_fs.js"></script>    
     <script src="../js/quotes.js"></script>
 
     <title>Planetary Dictator</title>
