--- a/templates/index.html
+++ b/templates/index.html
@@ -92,7 +92,12 @@
             </button>            
           </div>
           
-          <div class="modal-body" id="modal-body"></div>
+          <div class="modal-body" id="modal-body">
+            <div class="loading-msg"></div>
+
+            <div class="loading-quote"></div>
+
+          </div>
         </div>
       </div>
     </div>  
