--- a/templates/index.html
+++ b/templates/index.html
@@ -51,9 +51,9 @@
     <div class="row" id="file-actions">
       <div class="col">
         <div class="action-buttons" id="left-controls">
-          <button type="button" class="btn btn-primary show-swarm">Swarm Info</button>
-          <button type="button" class="btn btn-primary run-garbage-collection">Run Garbage Collection</button>
-          <button type="button" class="btn btn-danger exit-program">Shutdown Daemon</button>
+          <button type="button" class="btn btn-terminal show-swarm">Swarm Info</button>
+          <button type="button" class="btn btn-terminal run-garbage-collection">Run Garbage Collection</button>
+          <button type="button" class="btn btn-shutdown exit-program">Shutdown Daemon</button>
         </div>
 
       </div>
