--- a/templates/index.html
+++ b/templates/index.html
@@ -66,12 +66,12 @@
     <div class="row">
       <div class="col">
         <!-- Show the status, version and port of the IPFS node -->
-        <div id="ipfs-status">
+        <div id="ipfs-status" class="rounded info-panel">
           <strong>IPFS Status:</strong> Offline
         </div>
 
         <!-- Show bandwidth stats etc for the IPFS node -->
-        <div id="ipfs-stats"></div>
+        <div id="ipfs-stats" class="rounded info-panel"></div>
       </div>
 
       <div class="col" id="action-panel">       
